gen/v24.3/rpk/rpk-profile-edit.adoc
= rpk profile edit
:description: rpk profile edit

Edit an rpk profile.

This command opens your default editor to edit the specified profile, or
the current profile if no profile is specified. If the profile does not
exist, this command creates it and switches to it.

== Usage

[,bash]
----
rpk profile edit [NAME] [flags]
----

== Flags

[cols="1m,1a,2a"]
|===
|*Value* |*Type* |*Description*

|-h, --help |- |Help for edit.

|--config |string |Redpanda or rpk config file; default search paths are `/var/lib/redpanda/.config/rpk/rpk.yaml`, `$PWD/redpanda.yaml`, and `/etc/redpanda/redpanda.yaml`.

|-X, --config-opt |stringArray |Override rpk configuration settings; '-X help' for detail or '-X list' for terser detail.

|--profile |string |rpk profile to use.

|-v, --verbose |- |Enable verbose logging.
|===